# hpoint_service

./: Dockerfile  README.md  makefile
client_demo/: Cargo.toml
hpoint_db_pg/: Cargo.toml
hpoint_db_pg/src/: lib.rs  marco.rs  pg.rs
network_client/: Cargo.toml
network_client/src/: grpc_client.rs  main.rs  pointservice.rs
network_grpc/: config.yaml
network_grpc/src/: build.rs  main.rs  point.proto
network_grpc/src/runtime/: mod.rs
network_websocket/: Cargo.toml  config.yaml
network_websocket/src/: error.rs  log.rs  main.rs
network_websocket/src/runtime/: takio_runtime.rs
