[package]
name = "hpoint_db_pg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres="*"
r2d2_postgres = "0.18.1"
bb8-postgres = "0.7.0"
tokio = { version = "1.37.0" ,features = ["macros", "rt-multi-thread"]}
serde = { version = "1.0.203", features = ["derive"] }
prost = "0.12.6"