[package]
name = "client_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.21.0"
futures-util = "0.3.30"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
url = "2.5.0"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
tonic = "0.11.0"
prost = "0.12.6"
hpoint_db_pg = { version = "0.1.0", path = "../hpoint_db_pg" }
bincode = "1.3.3"


[[bin]]
name = "grpc_client"
path = "src/grpc_client.rs"