[package]
name = "network_websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.13.0"
tokio = { version = "1.27", features = ["full"] }
futures = "0.3"
structopt = "0.3"
thiserror = "1.0.22"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
tokio-tungstenite = "0.21.0"
hpoint_db_pg = { version = "0.1.0", path = "../hpoint_db_pg" }
log = "0.4.20"
log4rs = "1.0"
env_logger = "0.9.3"
warp = "0.3.2"